# julian-period

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  readme.md  tsconfig.json
cpp/: jp.hpp
cpp/example/: gtjd.hpp  main.cpp
cpp/example/pcolor/: pcolor.hpp
example/: main.cpp
jp/: jp.hpp
jp-example/: main.cpp
notes/: cycles.md  gregorianCorrection.md  meeus Algorithm.md
opt/: build.ts  helpers.ts
src/: index.ts
src/opt/: build.ts
tests/: index.test.ts
